monomorphization -> generics no cost perf

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -908,6 +908,341 @@
     "your code, it could indicate that your code needs restructuring into smaller  \n",
     "pieces."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In Enum Definitions\n",
+    "\n",
+    "As we did with structs, we can define enums to hold generic data types in their  \n",
+    "variants. Let’s take another look at the Option<T> enum that the standard  \n",
+    "library provides, which we used in Chapter 6:\n",
+    "\n",
+    "```rust\n",
+    "enum Option<T> {\n",
+    "    Some(T),    // Some Generic T Type\n",
+    "    None,       // None\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This definition should now make more sense to you. As you can see, the Option<T>  \n",
+    "enum is generic over type T and has two variants: Some, which holds one value of  \n",
+    "type T, and a None variant that doesn’t hold any value. By using the Option<T>  \n",
+    "enum, we can express the abstract concept of an optional value, and because  \n",
+    "Option<T> is generic, we can use this abstraction no matter what the type of the  \n",
+    "optional value is."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enums can use multiple generic types as well. The definition of the Result enum  \n",
+    "that we used in Chapter 9 is one example:\n",
+    "\n",
+    "```rust\n",
+    "enum Result<T, E> {\n",
+    "    Ok(T),  // Ok of generic T Type\n",
+    "    Err(E), // Error of generic E Type \n",
+    "}\n",
+    "```\n",
+    "\n",
+    "The Result enum is generic over two types, T and E, and has two variants: \n",
+    "\n",
+    "- Ok, which holds a value of type T, and  \n",
+    "- Err, which holds a value of type E.  \n",
+    "\n",
+    "This definition makes it convenient to use the Result enum anywhere we have an  \n",
+    "operation that might succeed (return a value of some type T) or fail (return an  \n",
+    "error of some type E). In fact, this is what we used to open a file in  \n",
+    "Listing 9-3, where T was filled in with the type std::fs::File when the file was  \n",
+    "opened successfully and E was filled in with the type std::io::Error when there  \n",
+    "were problems opening the file.\n",
+    "\n",
+    "When you recognize situations in your code with multiple struct or enum  \n",
+    "definitions that differ only in the types of the values they hold, you can avoid  \n",
+    "duplication by using generic types instead."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In Method Definitions\n",
+    "\n",
+    "We can implement methods on structs and enums (as we did in Chapter 5) and use  \n",
+    "generic types in their definitions, too. Listing 10-9 shows the Point<T> struct  \n",
+    "we defined in Listing 10-6 with a method named x implemented on it.  \n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p.x = 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "struct Point<T>{\n",
+    "    x:T,\n",
+    "    y:T,\n",
+    "}\n",
+    "\n",
+    "impl<T> Point<T> {\n",
+    "    fn x(&self) -> &T{\n",
+    "        &self.x\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let p = Point{x:5, y:10};\n",
+    "    println!(\"p.x = {}\", p.x());\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-9: Implementing a method named x on the Point<T> struct that will  \n",
+    "return a reference to the x field of type T\n",
+    "\n",
+    "Here, we’ve defined a method named x on Point<T> that returns a reference to the  \n",
+    "data in the field x.\n",
+    "\n",
+    "Note that we have to declare T just after impl so we can use T to specify that  \n",
+    "we’re implementing methods on the type Point<T>. By declaring T as a generic  \n",
+    "type after impl, Rust can identify that the type in the angle brackets in Point  \n",
+    "is a generic type rather than a concrete type. We could have chosen a different  \n",
+    "name for this generic parameter than the generic parameter declared in the  \n",
+    "struct definition, but using the same name is conventional. Methods written  \n",
+    "within an impl that declares the generic type will be defined on any instance of  \n",
+    "the type, no matter what concrete type ends up substituting for the generic  \n",
+    "type. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also specify constraints on generic types when defining methods on the  \n",
+    "type. We could, for example, implement methods only on Point<f32> instances  \n",
+    "rather than on Point<T> instances with any generic type. In Listing 10-10 we use  \n",
+    "the concrete type f32, meaning we don’t declare any types after impl.  \n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p3.x = 5, p3.y = c\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "struct Point<X1, Y1>{\n",
+    "    x:X1,\n",
+    "    y:Y1,\n",
+    "}\n",
+    "\n",
+    "impl<X1, Y1> Point<X1, Y1>{  // impl declares X1 and Y1 \n",
+    "    // X2 and Y2 aren't declared until they are used in the `mixup` method\n",
+    "    // - the point is generics can be declared at different levels as needed\n",
+    "    fn mixup<X2, Y2>(self, other: Point<X2, Y2>) -> Point<X1, Y2>{\n",
+    "        Point{\n",
+    "            x: self.x,\n",
+    "            y: other.y,\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let p1 = Point{x:5, y:10.4};\n",
+    "    let p2 = Point{x:\"Hello\", y:'c'};\n",
+    "\n",
+    "    let p3 = p1.mixup(p2);\n",
+    "\n",
+    "    println!(\"p3.x = {}, p3.y = {}\", p3.x, p3.y);\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-11: A method that uses generic types different from its struct’s  \n",
+    "definition\n",
+    "\n",
+    "In main, we’ve defined a Point that has an i32 for x (with value 5) and an f64  \n",
+    "for y (with value 10.4). The p2 variable is a Point struct that has a string  \n",
+    "slice for x (with value \"Hello\") and a char for y (with value c). Calling mixup  \n",
+    "on p1 with the argument p2 gives us p3, which will have an i32 for x, because x  \n",
+    "came from p1. The p3 variable will have a char for y, because y came from p2.  \n",
+    "The println! macro call will print p3.x = 5, p3.y = c.\n",
+    "\n",
+    "The purpose of this example is to demonstrate a situation in which some generic  \n",
+    "parameters are declared with impl and some are declared with the method  \n",
+    "definition. Here, the generic parameters X1 and Y1 are declared after impl  \n",
+    "because they go with the struct definition. The generic parameters X2 and Y2 are  \n",
+    "declared after fn mixup, because they’re only relevant to the method.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performance of Code Using Generics\n",
+    "\n",
+    "You might be wondering whether there is a runtime cost when using generic type  \n",
+    "parameters. The good news is that using generic types won't make your program  \n",
+    "run any slower than it would with concrete types.\n",
+    "\n",
+    "Rust accomplishes this by performing monomorphization of the code using generics  \n",
+    "at compile time. Monomorphization is the process of turning generic code into  \n",
+    "specific code by filling in the concrete types that are used when compiled. In  \n",
+    "this process, the compiler does the opposite of the steps we used to create  \n",
+    "the generic function in Listing 10-5: the compiler looks at all the places where  \n",
+    "generic code is called and generates code for the concrete types the generic  \n",
+    "code is called with."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s look at how this works by using the standard library’s generic Option<T>  \n",
+    "enum:\n",
+    "\n",
+    "```rust\n",
+    "let integer = Some(5);\n",
+    "let float = Some(5.0);\n",
+    "```\n",
+    "\n",
+    "When Rust compiles this code, it performs monomorphization. During that process,  \n",
+    "the compiler reads the values that have been used in Option<T> instances and  \n",
+    "identifies two kinds of Option<T>: one is i32 and the other is f64. As such, it  \n",
+    "expands the generic definition of Option<T> into two definitions specialized to  \n",
+    "i32 and f64, thereby replacing the generic definition with the specific ones.\n",
+    "\n",
+    "The monomorphized version of the code looks similar to the following (the  \n",
+    "compiler uses different names than what we’re using here for illustration):\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "integer = Some(5) float = Some(5.0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[derive(Debug)]\n",
+    "enum Option_i32{\n",
+    "    Some(i32),\n",
+    "    None\n",
+    "}\n",
+    "\n",
+    "#[derive(Debug)]\n",
+    "enum Option_f64{\n",
+    "    Some(f64),\n",
+    "    None\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let integer = Option_i32::Some(5);\n",
+    "    let float = Option_f64::Some(5.0);\n",
+    "\n",
+    "    println!(\"integer = {:?} float = {:?}\", integer, float);\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The generic Option<T> is replaced with the specific definitions created by the  \n",
+    "compiler. Because Rust compiles generic code into code that specifies the type  \n",
+    "in each instance, we pay no runtime cost for using generics. When the code runs,  \n",
+    "it performs just as it would if we had duplicated each definition by hand. The  \n",
+    "process of monomorphization makes Rust’s generics extremely efficient at  \n",
+    "runtime."
+   ]
   }
  ],
  "metadata": {
