Trait coherence rule hurts gpt

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -1243,6 +1243,294 @@
     "process of monomorphization makes Rust’s generics extremely efficient at  \n",
     "runtime."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Traits: Defining Shared Behavior\n",
+    "---\n",
+    "\n",
+    "A trait defines functionality a particular type has and can share with other  \n",
+    "types. We can use traits to define shared behavior in an abstract way. We can  \n",
+    "use trait bounds to specify that a generic type can be any type that has certain  \n",
+    "behavior.\n",
+    "\n",
+    "> Note: Traits are similar to a feature often called interfaces in other  \n",
+    "languages, although with some differences."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining a Trait\n",
+    "\n",
+    "A type’s behavior consists of the methods we can call on that type. Different  \n",
+    "types share the same behavior if we can call the same methods on all of those  \n",
+    "types. Trait definitions are a way to group method signatures together to define  \n",
+    "a set of behaviors necessary to accomplish some purpose.\n",
+    "\n",
+    "For example, let’s say we have multiple structs that hold various kinds and  \n",
+    "amounts of text: a NewsArticle struct that holds a news story filed in a  \n",
+    "particular location and a Tweet that can have at most 280 characters along with  \n",
+    "metadata that indicates whether it was a new tweet, a retweet, or a reply to  \n",
+    "another tweet.\n",
+    "\n",
+    "We want to make a media aggregator library crate named aggregator that can  \n",
+    "display summaries of data that might be stored in a NewsArticle or Tweet  \n",
+    "instance. To do this, we need a summary from each type, and we’ll request that  \n",
+    "summary by calling a summarize method on an instance. Listing 10-12 shows the  \n",
+    "definition of a public Summary trait that expresses this behavior.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub trait Summary{\n",
+    "    fn summarize(&self) -> String;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-12: A Summary trait that consists of the behavior provided by a  \n",
+    "summarize method\n",
+    "\n",
+    "Here, we declare a trait using the trait keyword and then the trait’s name,  \n",
+    "which is Summary in this case. We’ve also declared the trait as pub so that  \n",
+    "crates depending on this crate can make use of this trait too, as we’ll see in  \n",
+    "a few examples. Inside the curly brackets, we declare the method signatures  \n",
+    "that describe the behaviors of the types that implement this trait, which in  \n",
+    "this case is fn summarize(&self) -> String."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the method signature, instead of providing an implementation within curly  \n",
+    "brackets, we use a semicolon. Each type implementing this trait must provide its  \n",
+    "own custom behavior for the body of the method. The compiler will enforce that  \n",
+    "any type that has the Summary trait will have the method summarize defined with  \n",
+    "this signature exactly.\n",
+    "\n",
+    "A trait can have multiple methods in its body: the method signatures are listed  \n",
+    "one per line and each line ends in a semicolon."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing a Trait on a Type\n",
+    "\n",
+    "Now that we’ve defined the desired signatures of the Summary trait’s methods,  \n",
+    "we can implement it on the types in our media aggregator. Listing 10-13 shows an  \n",
+    "implementation of the Summary trait on the NewsArticle struct that uses the  \n",
+    "headline, the author, and the location to create the return value of summarize.  \n",
+    "For the Tweet struct, we define summarize as the username followed by the entire  \n",
+    "text of the tweet, assuming that tweet content is already limited to 280  \n",
+    "characters.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 new tweet -> InternetsMainCharacter: Just witnessed another annoying thing that doesn't match MY world view!\n",
+      "BREAKING : Ai bites dog, by Fred FearsGPT (SillyVille)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub struct NewsArticle {\n",
+    "    pub headline: String,\n",
+    "    pub location: String,\n",
+    "    pub author : String,\n",
+    "    pub content: String,\n",
+    "\n",
+    "}\n",
+    "\n",
+    "impl Summary for NewsArticle{\n",
+    "    fn summarize(&self) -> String{\n",
+    "        format!(\"{}, by {} ({})\", self.headline, self.author, self.location)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct Tweet {\n",
+    "    pub username: String,\n",
+    "    pub content: String,\n",
+    "    pub reply: bool,\n",
+    "    pub retweet: bool,\n",
+    "}\n",
+    "\n",
+    "impl Summary for Tweet{\n",
+    "    fn summarize(&self) -> String{\n",
+    "        format!(\"{}: {}\", self.username, self.content)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let tweet = Tweet{\n",
+    "        username: String::from(\"InternetsMainCharacter\"),\n",
+    "        content: String::from(\"Just witnessed another annoying thing that doesn't match MY world view!\"),\n",
+    "        reply: false,\n",
+    "        retweet: false,\n",
+    "    };\n",
+    "    println!(\"1 new tweet -> {}\", tweet.summarize());\n",
+    "\n",
+    "    let article = NewsArticle{\n",
+    "        headline: String::from(\"Ai bites dog\"),\n",
+    "        location: String::from(\"SillyVille\"),\n",
+    "        author: String::from(\"Fred FearsGPT\"),\n",
+    "        content: String::from(\"What if man's best friend likes this?  Stopping training fixes it!\")\n",
+    "    };\n",
+    "    println!(\"BREAKING : {}\", article.summarize());\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-13: Implementing the Summary trait on the NewsArticle and Tweet types\n",
+    "\n",
+    "Implementing a trait on a type is similar to implementing regular methods. The  \n",
+    "difference is that after impl, we put the trait name we want to implement, then  \n",
+    "use the for keyword, and then specify the name of the type we want to implement  \n",
+    "the trait for. Within the impl block, we put the method signatures that the  \n",
+    "trait definition has defined. Instead of adding a semicolon after each  \n",
+    "signature, we use curly brackets and fill in the method body with the specific  \n",
+    "behavior that we want the methods of the trait to have for the particular type.  \n",
+    "\n",
+    "Now that the library has implemented the Summary trait on NewsArticle and Tweet,  \n",
+    "users of the crate can call the trait methods on instances of NewsArticle and  \n",
+    "Tweet in the same way we call regular methods. The only difference is that the  \n",
+    "user must bring the trait into scope as well as the types. Here’s an example of  \n",
+    "how a binary crate could use our aggregator library crate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "unresolved import `aggregator`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0432] Error:\u001b[0m unresolved import `aggregator`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "unresolved import `aggregator`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0432] Error:\u001b[0m unresolved import `aggregator`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "type `Option_f64` should have an upper camel case name",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[non_camel_case_types] Error:\u001b[0m type `Option_f64` should have an upper camel case name"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "type `Option_i32` should have an upper camel case name",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[non_camel_case_types] Error:\u001b[0m type `Option_i32` should have an upper camel case name"
+     ]
+    }
+   ],
+   "source": [
+    "use aggregator::{Summary, Tweet}; // @todo - make this an external crate\n",
+    "\n",
+    "{\n",
+    "    let tweet = Tweet{\n",
+    "        username: String::from(\"InternetsMainCharacter\"),\n",
+    "        content: String::from(\"Just witnessed another annoying thing that doesn't match MY world view!\"),\n",
+    "        reply: false,\n",
+    "        retweet: false,\n",
+    "    };\n",
+    "    println!(\"Top of feed -> {}\", tweet.summarize());\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code prints 1 new tweet: horse_ebooks: of course, as you probably already  \n",
+    "know, people.\n",
+    "\n",
+    "Other crates that depend on the aggregator crate can also bring the Summary  \n",
+    "trait into scope to implement Summary on their own types. One restriction to  \n",
+    "note is that we can implement a trait on a type only if at least one of the  \n",
+    "trait or the type is local to our crate. For example, we can implement standard  \n",
+    "library traits like Display on a custom type like Tweet as part of our  \n",
+    "aggregator crate functionality, because the type Tweet is local to our  \n",
+    "aggregator crate. We can also implement Summary on Vec<T> in our aggregator  \n",
+    "crate, because the trait Summary is local to our aggregator crate.\n",
+    "\n",
+    "But we can’t implement external traits on external types. For example, we can’t  \n",
+    "implement the Display trait on Vec<T> within our aggregator crate, because  \n",
+    "Display and Vec<T> are both defined in the standard library and aren’t local to  \n",
+    "our aggregator crate. This restriction is part of a property called coherence,  \n",
+    "and more specifically the orphan rule, so named because the parent type is not  \n",
+    "present. This rule ensures that other people’s code can’t break your code and  \n",
+    "vice versa. Without the rule, two crates could implement the same trait for the  \n",
+    "same type, and Rust wouldn’t know which implementation to use."
+   ]
   }
  ],
  "metadata": {
